# ShiYu-AI-Courses-SCIST-Camp-2026

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm-api/: free_models.txt  free_models_crawler.py  llm_dcbot_api.py
src/llm-ollama/: llm_dcbot_ollama.py
src/llm-rag/: build_vectordb.py  embeddings.py  llm_dcbot_ollama_rag.py
src/llm-rag/faiss_db/: index.faiss  index.pkl
